# Custom-TensorFlow-compute-capability-sm-120

./: .ci-rebuild-trigger  CHANGELOG.md  CMakeLists.txt  CRITICAL_BUILD_FIXES_COMPLETE.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GITHUB_ACTIONS_FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  WORKFLOW_FIXES_SUMMARY.md  launch_sm120_build.sh  setup.py  tf-sm120-deep-analysis.md
.github/: FORCE_REBUILD
.github/workflows/: build-wheels.yml
cmake/: TensorFlowSM120Config.cmake.in  TensorFlowSM120Targets.cmake.in
docker/: Dockerfile.centos  Dockerfile.ubuntu  README.md
docs/: api-reference.md  build-guide.md  performance.md  troubleshooting.md
examples/: basic-gpu-test.py  basic_usage.py  benchmark.py  comprehensive_sm120_example.py
patches/: apply-patches.sh  fix-c23-extensions.patch  fix-matrix-naming.patch  fix-sm120-support.patch  fix-template-errors.patch
python/: __init__.py  benchmark.py  sm120_datatype_manager.py  sm120_keras_layers.py  sm120_ops.py  sm120_performance_api.py  validate.py
scripts/: build-docker.sh  build-tensorflow.sh  comprehensive-build.sh  run-compatibility-tests.sh  setup-environment.sh  test-fixes.sh  test-hardware-compatibility.py  validate-installation.py
src/: BUILD
src/cuda_kernels/: sm120_backward_kernels.cu  sm120_backward_kernels.h  sm120_c_interface.cu  sm120_c_interface.h  sm120_datatype_support.h  sm120_dynamic_shapes.cu  sm120_error_handling.cu  sm120_error_handling.h  sm120_kernel_launcher.h  sm120_kernel_launcher_fixed.h  sm120_optimized_kernels.cu  sm120_optimized_kernels_fixed.cu  sm120_primitives.cu  sm120_pure_kernels.cu  sm120_rtx50_verification.cu  tensorflow_compatibility.h
src/python_bindings/: sm120_python_ops.cc  sm120_python_ops.h
src/tensorflow_ops/: sm120_complete_ops.cc  sm120_gradients.cc  sm120_kernel_implementations.cu  sm120_ops.cc  sm120_ops_fixed.cc  sm120_stream_utils.h  sm120_tensorflow_ops.cc
tests/: test_sm120_operations.py
tests/integration/: test_comprehensive_validation.py
